<resources>
    <string name="app_name">Bike app</string>
    <string name="navigation_rail">Navigate between items here</string>
    <string name="back_button">Back</string>
    <string name="expand_button_content_description">Expand task item</string>
    <string name="no_item_description">Oops!\nNo items in the inventory.\nTap + to add.</string>
    <string name="in_stock">%d in stock</string>
    <string name="loading_failed">Failed to load</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading</string>
    <string name="mars_photo">Mars photo</string>
    <string name="detail">Bike detail</string>

</resources>