...
                BikeBottomAppBar(goHome)

            },
            floatingActionButton = {
                FloatingActionButton(onClick = { isAddNewVisible = !isAddNewVisible }) {
                    Log.d("add2", isAddNewVisible.toString())
                    Icon(Icons.Default.Add, contentDescription = "Add")
                }
            },
        ) { innerPadding ->
            navComponent(
                navController,
                modifier = Modifier.padding(innerPadding),
...
